# monster-word-lab

./: .gitignore  Makefile  OVERVIEW.md  README.md  call-agent.py  dockerfile  dockerfile.agent  main.py  pyproject.toml  requirements.txt
api/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: configs.ts  index.ts
api/src/lib/: generations.ts  storage.ts
api/src/models/: database.ts  generations.ts
api/src/routes/: congratulations.ts  generations.ts
api/src/scripts/: delete-generation.ts  find-curieux.ts
monster_word_agent/: agent.py  app_configs.py
monster_word_agent/builder/: agent.py  instructions.py
monster_word_agent/builder/tools/: combine.py  generate.py  orchestrator.py  persistence.py  speech.py
monster_word_agent/creative/: agent.py  instructions.py
monster_word_agent/designer/: agent.py  instructions.py
monster_word_agent/teacher/: agent.py  instructions.py  tools.py
src/: agent.py  database.py
src/builder/: agent.py  instructions.py
src/creative/: agent.py  instructions.py
src/teacher/: agent.py  instructions.py
types/: index.d.ts
web/: configs.ts  package-lock.json  package.json  start-page.md  summary-project.md
web/app/: Home.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
web/components/: CongratulationsVideo.tsx  GuidedModeSelector.tsx  I18nProvider.tsx  ImageButton.tsx  JsonLd.tsx  LanguageSelector.tsx  LoadingAnimation.tsx  Modal.tsx  SelectionPanel.tsx  Title.tsx
web/contexts/: session.contexts.tsx
web/lib/: generations.ts  i18n.ts  umami.d.ts
(+14 files in other folders)
